# gnss-sdr-new

./: .gitignore  CMakeLists.txt  README.md
docs/protobuf/: gnss_synchro.proto
src/algorithms/: CMakeLists.txt
src/algorithms/PVT/adapters/: rtklib_pvt.cc
src/algorithms/PVT/gnuradio_blocks/: rtklib_pvt_gs.cc  rtklib_pvt_gs.h
src/algorithms/PVT/libs/: hybrid_ls_pvt.cc  pvt_conf.cc  pvt_conf.h  rinex_printer.h  rtcm_printer.h  rtklib_solver.cc
src/algorithms/acquisition/adapters/: beidou_b1i_pcps_acquisition.h  galileo_e1_pcps_8ms_ambiguous_acquisition.h  galileo_e1_pcps_ambiguous_acquisition.h  galileo_e1_pcps_cccwsr_ambiguous_acquisition.h  galileo_e1_pcps_quicksync_ambiguous_acquisition.h  galileo_e1_pcps_tong_ambiguous_acquisition.h  galileo_e5a_noncoherent_iq_acquisition_caf.h  galileo_e5a_pcps_acquisition.h  glonass_l1_ca_pcps_acquisition.h  glonass_l2_ca_pcps_acquisition.h  gps_l1_ca_pcps_acquisition.h  gps_l1_ca_pcps_acquisition_fine_doppler.h  gps_l1_ca_pcps_assisted_acquisition.h  gps_l1_ca_pcps_quicksync_acquisition.h  gps_l1_ca_pcps_tong_acquisition.h  gps_l2_m_pcps_acquisition.h  gps_l5i_pcps_acquisition.h
src/algorithms/acquisition/gnuradio_blocks/: galileo_e5a_noncoherent_iq_acquisition_caf_cc.h  pcps_acquisition.cc  pcps_acquisition.h
src/algorithms/acquisition/libs/: acq_conf.cc  acq_conf.h
src/algorithms/channel/adapters/: channel.h
src/algorithms/libs/: galileo_e1_signal_processing.cc  galileo_e5_signal_processing.cc  gps_l5_signal.cc  pass_through.h  rtcm.cc  rtcm.h
src/algorithms/observables/gnuradio_blocks/: hybrid_observables_cc.cc  hybrid_observables_gs.cc
src/algorithms/signal_generator/adapters/: CMakeLists.txt
src/algorithms/signal_generator/gnuradio_blocks/: signal_generator_c.cc
src/algorithms/signal_sink/: CMakeLists.txt
src/algorithms/signal_sink/adapters/: CMakeLists.txt  uhd_signal_sink.cc  uhd_signal_sink.h
src/algorithms/signal_sink/libs/: CMakeLists.txt  gnss_sdr_valve.cc
src/algorithms/signal_source/adapters/: gen_signal_source.h
src/algorithms/telemetry_decoder/gnuradio_blocks/: beidou_b1i_telemetry_decoder_cc.h  glonass_l1_ca_telemetry_decoder_cc.h  glonass_l2_ca_telemetry_decoder_cc.h  gps_l1_ca_telemetry_decoder_gs.cc  gps_l1_ca_telemetry_decoder_gs.h  gps_l5_telemetry_decoder_cc.cc  sbas_l1_telemetry_decoder_cc.cc  sbas_l1_telemetry_decoder_cc.h
src/algorithms/telemetry_decoder/libs/: tlm_conf.cc  tlm_conf.h
src/algorithms/telemetry_decoder/libs/libswiftcnav/: cnav_msg.h
src/algorithms/tracking/gnuradio_blocks/: dll_pll_veml_tracking.cc  dll_pll_veml_tracking.h  galileo_e1_tcp_connector_tracking_cc.cc
src/algorithms/tracking/libs/: dll_pll_conf.cc  dll_pll_conf.h
src/core/libs/: gnss_sdr_supl_client.cc  gnss_sdr_supl_client.h
src/core/libs/supl/: supl.h
src/core/libs/supl/asn-rrlp/: converter-sample.c
src/core/libs/supl/asn-supl/: INTEGER.h  OCTET_STRING.h  UTCTime.h  ber_tlv_length.h  ber_tlv_tag.h  constr_CHOICE.c  der_encoder.h  per_encoder.h  per_opentype.h  per_support.h  xer_decoder.h  xer_encoder.h  xer_support.h
src/core/monitor/: serdes_gnss_synchro.h
src/core/receiver/: CMakeLists.txt  control_message_factory.h  control_thread.h  gnss_block_factory _bak.cc  gnss_block_factory _bak.h  gnss_block_factory.cc  gnss_block_factory.h
src/core/system_parameters/: GLONASS_L1_L2_CA.h  GPS_L5.h  Galileo_E1.h  Galileo_E5a.h  glonass_gnav_ephemeris.h  glonass_gnav_navigation_message.cc  gnss_satellite.h  gnss_synchro.h
src/main/: main.cc
src/tests/unit-tests/signal-processing-blocks/acquisition/: acq_performance_test.cc  galileo_e1_pcps_ambiguous_acquisition_test.cc  gps_l2_m_pcps_acquisition_test.cc
src/tests/unit-tests/signal-processing-blocks/libs/: observables_dump_reader.h
src/utils/: CMakeLists.txt
src/utils/front-end-cal/: front_end_cal.cc
src/utils/matlab/: dll_pll_veml_plot_sample.m  gps_l1_ca_dll_pll_plot_sample.m  gps_l1_ca_kf_plot_sample.m  gps_l1_ca_pvt_plot_sample_agilent_cap2.m  gps_l1_ca_pvt_raw_plot_sample.m  gps_l1_ca_telemetry_plot_sample.m  hybrid_observables_plot_sample.m  plot_acq_grid.m  plot_tracking_quality_indicators.m
src/utils/monitoring-client/: CMakeLists.txt  gnss_synchro.pb.cc  gnss_synchro.pb.h  gnss_synchro_udp_source.cc  gnss_synchro_udp_source.h  main.cc  monitor_pvt.pb.cc  monitor_pvt.pb.h
work_log/: notebook.md  save.sh  signalRecord.grc  top_block.py
work_log/myconf/: 2013_04_04_GNSS_SIGNAL_at_CTTC_SPAIN.conf  gnss-sdr-gui  gnss-sdr.conf  hackrf (copy).conf  hackrf.conf  hackrf_GPS_L1.conf  my-first-GNSS-SDR-receiver.conf  my_GPS_receiver.conf  mysdr-bds.conf  mysdr-gps+bds+gla.conf  mysdr-gps+multichannel.conf  mysdr-plutosdr.conf  mysdr.conf  mysdr.conf.bak  temp.ini  usrp-realtime.conf  usrp.conf
